# I2C-examples

./: CMakeLists.txt  I2C_Master_ex.cpp  I2C_Master_singlebyte_ex.cpp  I2C_Master_transfer_ex.cpp  I2C_Slave_ex.cpp  I2C_bus_scanner.cpp  README.md  cmake-variants.yaml  mbed_app.json5
